--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=HandToHand
 spring.datasource.url=jdbc:mysql://localhost:3306/HandToHand?createDatabaseIfNotExist=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,11 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
 
-spring.mail.host=localhost
-spring.mail.port=9025
+jwt.secret=MaSuperCleSecreteUltraLonguePourJWT123456789
 
-server.port=8080
+
+server.port=9090
 
